# ghTrader

./: .gitignore  AGENTS.md  PRD.md  README.md  env.example  pyproject.toml
.cursor/plans/: account-management-polish_74af4c99.plan.md  akshare+dataplan_restore_3de806c6.plan.md  audit+checksums+dashboardparity_092020a7.plan.md  ci+maindepthscaling_157227a0.plan.md  dashboard_ui_overhaul_125ef461.plan.md  data-system-rebuild_0ad676f6.plan.md  data-tab-contract-catalog_42e8ae78.plan.md  database-framework-improvements_b988a56a.plan.md  fix-contracts-timeouts-v2_3ca9cdb5.plan.md  ghtrader_detailed_plan_1c472119.plan.md  ghtrader_model+tests_update_a5ef8e4e.plan.md  lakev2-ux-parity_048809f4.plan.md  multisession-robust-control_c9bdaa3a.plan.md  phase_3_cleanup_2d6b6e89.plan.md  (+7 more)
.github/workflows/: ci.yml
reports/: architecture_critical_path_deep_dive.md  architecture_file_audit_index.md  architecture_optimization_plan.md  comprehensive_architecture_review.md  comprehensive_implementation_audit.md  coverage_governance_review.md  data_quality_operations_manual.md  data_system_optimization.md  incident_response_runbook.md  prd_best_in_class_gap_analysis.md  prd_bigbang_closeout.md  prd_hardware_optimization_closeout.md  prd_traceability_matrix.md  prd_writeback_draft.md  system_optimization_roadmap.md
tests/: __init__.py  conftest.py  test_accounts_profiles.py  test_active_ranges_streaming.py  test_akshare_daily.py  test_audit_completeness.py  test_benchmark.py  test_capacity_matrix.py  test_cli.py  test_cli_config_commands.py  test_cli_runtime_locks.py  test_cli_session_registry.py  test_config_service_core.py  test_contract_explorer.py  test_contract_range.py  test_control_accounts_api.py  test_control_api.py  test_control_app_factory.py  test_control_cache.py  test_control_config_api.py  test_control_config_page.py  test_control_contracts_api.py  test_control_data_page.py  test_control_explorer_page.py  test_control_gateway_api.py  test_control_job_metadata.py  test_control_jobs.py  test_control_locks.py  test_control_main_build_dedupe.py  test_control_quality_apis.py  test_control_query_budget_pagination.py  test_control_state_helpers.py  test_control_strategy_api.py  test_control_trading_console_api.py  test_control_train_launch.py  test_control_variety_defaults.py  test_control_variety_filters.py  test_control_variety_routes.py  test_control_views_data_actions.py  test_control_views_data_page.py  (+86 more)
(+228 files in other folders)
