[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghtrader"
version = "0.1.0"
description = "AI-centric SHFE tick research system using TqSdk Pro"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ghTrader maintainers" }]
dependencies = [
  "click>=8.1",
  "structlog>=24.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "python-dotenv>=1.0",
  "scikit-learn>=1.3",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
]
control = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "psutil>=5.9",
]
questdb = [
  "questdb>=4.1.0",
  "psycopg[binary]>=3.2.0",
]
tabular = [
  "xgboost>=2.0",
  "lightgbm>=4.0",
]
sweep = [
  "ray[tune]>=2.9",
]

[project.scripts]
ghtrader = "ghtrader.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ghtrader.control" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: tests that require network/credentials",
  "ddp_integration: tests that require torchrun multi-process",
]

